--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-body {
+*{
     margin: 0;
-    padding: 0;}
+    padding: 0;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
