--- a/style.css
+++ b/style.css
@@ -4,22 +4,22 @@
 }
 .container {  display: grid;
     grid-template-columns: 1fr 532px 1fr;
-    grid-template-rows: 1fr 850px 1fr;
+    grid-template-rows: 1fr 850px ;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
       "Titre Game Side"
-      "Info Game Side"
-      "Score Game Side";
+      "Info Game Side";
   }
   
-  .Game { grid-area: Game; }
+  #Titre { grid-area: Titre; }
   
-  .Titre { grid-area: Titre; }
+  #Info { grid-area: Info; }
   
-  .Info { grid-area: Info; }
+  #Side { grid-area: Side; }
   
-  .Side { grid-area: Side; }
-  
-  .Score { grid-area: Score; }
-  
+  #Game { grid-area: Game; }
+
+#perso{
+    position: absolute;
+}
